# CS200-Opt-Assignment-1

./: .clang-tidy  .gitignore  Affine.cpp  Affine.h  CMakeLists.txt  CMakePresets.json  Camera.cpp  Custom.cpp  DPTexturedMesh.h  Mesh.h  MyTexturedMesh.cpp  MyTexturedMesh.h  MyTexturedMeshTest.cpp  MyTiledMesh.cpp  MyTiledMesh.h  MyTiledMeshTest.cpp  SolidRender.cpp  SolidRender.h  SquareMesh.cpp  SquareMesh.h  SquareTexturedMesh.cpp  SquareTexturedMesh.h  Texture.cpp  Texture.h  TextureRender.cpp  TextureRender.h  flake.nix
